crates/pardosa-schema/tests/compile_fail/vec_field_rejected.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    items: Vec<u32>,
}
fn main() {}
