crates/pardosa-schema/tests/compile_fail/vec_field_rejected.stderr
error: EVT-014: GenomeSafe: Use `EventVec<T, MAX>` from pardosa_schema::bounded; raw `Vec<T>` is unbounded and refused.
 --> tests/compile_fail/vec_field_rejected.rs:4:12
  |
4 |     items: Vec<u32>,
  |            ^^^^^^^^
